Add api of getting all vmm hosts and vm hosts
